feat: Implement wishlist functionality and integrate with frontend
- Added WishlistController and WishlistService in the backend to manage user wishlists.
- Implemented toggle functionality for adding/removing products from the wishlist.
- Created WishlistContext in the frontend to manage wishlist state and interactions.
- Updated ProductDetails and Shop pages to include wishlist actions.
- Enhanced image optimization utility to support Cloudinary and external URLs.
- Updated Home and Shop pages with new image sources from Cloudinary.
- Added production readiness checklist for the admin dashboard.
- Updated vercel.json for local API testing.